separate test from lib

--- a/example/templates/welcome/email.html
+++ b/example/templates/welcome/email.html
@@ -1,4 +1,4 @@
-{% extends "examples/email-layout1.html" %}
+{% extends "example/templates/_layouts/email-transactional.html" %}
 
 {% block content %}
   Hi {{user.firstname}},<br><br>
